; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/apphelp/extr_data.c_silence_debug_output.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/apphelp/extr_data.c_silence_debug_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"SHIM_DEBUG_LEVEL\00", align 1
@ERROR_ENVVAR_NOT_FOUND = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c"0\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"SHIMENG_DEBUG_LEVEL\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @silence_debug_output() #0 {
  %1 = call i64 @GetEnvironmentVariableA(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32* null, i32 0)
  %2 = load i64, i64* @ERROR_ENVVAR_NOT_FOUND, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @SetEnvironmentVariableA(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %6

6:                                                ; preds = %4, %0
  %7 = call i64 @GetEnvironmentVariableA(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i32* null, i32 0)
  %8 = load i64, i64* @ERROR_ENVVAR_NOT_FOUND, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %6
  %11 = call i32 @SetEnvironmentVariableA(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %6
  ret void
}

declare dso_local i64 @GetEnvironmentVariableA(i8*, i32*, i32) #1

declare dso_local i32 @SetEnvironmentVariableA(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
